--- a/source/index.html
+++ b/source/index.html
@@ -37,14 +37,14 @@
           <img class="intro__text-image" src="https://via.placeholder.com/150x150" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         </section>
         <section class="features-preview">
-          <h2 class="features-preview__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <h2 class="features-preview__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="features-preview__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </section>
         <section class="features">
           <h2 class="visually-hidden">Приемущества</h2>
           <ol class="features__list features-list">
             <li class="features-list__item">
-              <h3 class="features-list__title">Настоящий  городок</h3>
+              <h3 class="features-list__title">Настоящий городок</h3>
               <p class="features-list__order">— №1 —</p>
               <p class="features-list__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
@@ -67,22 +67,22 @@
             </li>
             <img class="features-list__image" src="https://via.placeholder.com/150x150" alt="Изображение каньона">
             <li class="features-list__item">
-              <h3 class="features-list__title">Там есть  мост дьявола</h3>
+              <h3 class="faeture-list__title">Там есть мост дьявола</h3>
               <p class="features-list__order">— №2 —</p>
               <p class="features-list__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </li>
             <li class="features-list__item">
               <h3 class="features-list__title">Небольшая площадь</h3>
               <p class="features-list__order">— №3 —</p>
-              <p class="features-list__description">Все достопримечательности  находятся очень близко</p>
+              <p class="feature-lidt__description">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="features-list__item">
               <h3 class="features-list__title">Красивая дорога</h3>
               <p class="features-list__order">— №4 —</p>
-              <p class="features-list__description">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
+              <p class="features-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features-list__item">
-              <h3 class="features-list__title">Мало   туристов </h3>
+              <h3 class="features-list__title">Мало туристов</h3>
               <p class="features-list__order">— №5 —</p>
               <p class="features-list__description">Большинство едет в гранд каньон и толпится там</p>
             </li>
