Разметка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -12,28 +12,27 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">Главная</a>
+              <a href="#" class="site-list__link">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a href="#" class="site-list__link">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a href="#" class="site-list__link">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru">HTML Academy</a>
+              <a href="https://htmlacademy.ru" class="site-list__link">HTML Academy</a>
             </li>
           </ul>
         </div>
         <div class="main-nav__logo">
-          <a href="index.html"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
+          <a href="index.html" class="main-nav__link"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
         </div>
       </nav>
     </header>
       <main class="page-main">
         <section class="intro">
           <h1 class="visually-hidden">Сайт города Седона</h1>
-          <img class="intro__background-image" src="https://via.placeholder.com/150x150" alt="Изображение каньона">
           <img class="intro__text-image" src="https://via.placeholder.com/150x150" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         </section>
         <section class="features-preview">
@@ -67,14 +66,14 @@
             </li>
             <img class="features-list__image" src="https://via.placeholder.com/150x150" alt="Изображение каньона">
             <li class="features-list__item">
-              <h3 class="faeture-list__title">Там есть мост дьявола</h3>
+              <h3 class="features-list__title">Там есть мост дьявола</h3>
               <p class="features-list__order">— №2 —</p>
               <p class="features-list__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </li>
             <li class="features-list__item">
               <h3 class="features-list__title">Небольшая площадь</h3>
               <p class="features-list__order">— №3 —</p>
-              <p class="feature-lidt__description">Все достопримечательности находятся очень близко</p>
+              <p class="feature-list__description">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="features-list__item">
               <h3 class="features-list__title">Красивая дорога</h3>
