--- a/source/photo.html
+++ b/source/photo.html
@@ -12,27 +12,26 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">Главная</a>
+              <a href="#" class="site-list__link">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a href="#" class="site-list__link">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a href="#" class="site-list__link">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru">HTML Academy</a>
+              <a href="https://htmlacademy.ru" class="site-list__link">HTML Academy</a>
             </li>
           </ul>
         </div>
         <div class="main-nav__logo">
-          <a href="index.html"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
+          <a href="index.html" class="main-nav__link"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
         </div>
       </nav>
     </header>
       <main class="page-main">
         <section class="page-main__preview preview">
-            <img class="preview__background-image" src="https://via.placeholder.com/150x150" alt="Изображение каньона">
             <img class="preview__text-image" src="https://via.placeholder.com/150x150" alt="Sedona">
         </section>
         <section class="photo">
@@ -43,28 +42,28 @@
               <img class="photo-list__image"src="https://via.placeholder.com/150x150">
               <h2 class="photo-list__title">Неродные просторы</h2>
               <p class="photo-list__author">Автор фото: Борис</p>
-              <img class="photo-list__likes"src="https://via.placeholder.com/150x150">
+              <button class="photo-list__likes"><img class="photo-list__likes-icon" src="https://via.placeholder.com/150x150"></button>
               <p class="photo-list__likes-number">1350</p>
             </li>
             <li class="photo-list__item">
               <img class="photo-list__image" src="https://via.placeholder.com/150x150">
               <h2 class="photo-list__title">Местная растительность</h2>
               <p class="photo-list__author">Автор фото: Сергей</p>
-              <img class="photo-list__likes" src="https://via.placeholder.com/150x150">
+              <button class="photo-list__likes"><img class="photo-list__likes-icon" src="https://via.placeholder.com/150x150"></button>
               <p class="photo-list__likes-number">143</p>
             </li>
             <li class="photo-list__item">
               <img class="photo-list__image" src="https://via.placeholder.com/150x150">
               <h2 class="photo-list__title">Дорога на север</h2>
               <p class="photo-list__author">Автор фото: Петр</p>
-              <img class="photo-list__likes" src="https://via.placeholder.com/150x150">
+              <button class="photo-list__likes"><img class="photo-list__likes-icon" src="https://via.placeholder.com/150x150"></button>
               <p class="photo-list__likes-number">96</p>
             </li>
             <li class="photo-list__item">
               <img class="photo-list__image" src="https://via.placeholder.com/150x150">
               <h2 class="photo-list__title">Мост дьявола</h2>
               <p class="photo-list__author">Автор фото: Антон</p>
-              <img class="photo-list__likes" src="https://via.placeholder.com/150x150">
+              <button class="photo-list__likes"><img class="photo-list__likes-icon" src="https://via.placeholder.com/150x150"></button>
               <p class="photo-list__likes-number">254</p>
             </li>
           </ul>
