--- a/source/reviews.html
+++ b/source/reviews.html
@@ -12,27 +12,26 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">Главная</a>
+              <a href="#" class="site-list__link">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a href="#" class="site-list__link">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a href="#" class="site-list__link">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru">HTML Academy</a>
+              <a href="https://htmlacademy.ru" class="site-list__link">HTML Academy</a>
             </li>
           </ul>
         </div>
         <div class="main-nav__logo">
-          <a href="index.html"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
+          <a href="index.html" class="main-nav__link"><img class="page-header__logo-image" src="https://via.placeholder.com/150x150" alt="Логотип Седона">
         </div>
       </nav>
     </header>
       <main class="page-main">
         <section class="page-main__preview preview">
-            <img class="preview__background-image" src="https://via.placeholder.com/150x150" alt="Изображение каньона">
             <img class="preview__text-image" src="https://via.placeholder.com/150x150" alt="Sedona">
         </section>
       </main>
