Разметка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -87,6 +87,14 @@
             </li>
           </ol>
         </section>
+        <section class="hotel-search">
+          <h2 class="hotel-search__title">Заинтересовались?</h2>
+          <p class="hotel-search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button class="hotel-search__button">Найти гостиницу</button>
+          <div class="hotel-search__map">
+            <img src="https://via.placeholder.com/150x150" class="hotel-search__image" alt="Карта">
+          </div>
+        </section>
       </main>
       <footer class="page-footer">
         <div class="page-footer__content footer-content">
