Разметка страницы фото и видео

--- a/source/photo.html
+++ b/source/photo.html
@@ -68,6 +68,11 @@
             </li>
           </ul>
         </section>
+        <section class="presentation">
+          <h2 class="presentation__title">Все еще сомневаетесь?</h2>
+          <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+          <video class="presentation__video"></video>
+        </section>
       </main>
       <footer class="page-footer">
         <div class="page-footer__content footer-content">
